--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^15.12.1",
     "@types/randomstring": "^1.1.6",
+    "@types/swagger-jsdoc": "^6.0.0",
+    "@types/swagger-ui-express": "^4.1.2",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "ts-dotenv": "^0.8.3",
     "ts-node": "^10.0.0",
@@ -25,11 +30,14 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
-    "randomstring": "^1.2.1"
+    "randomstring": "^1.2.1",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "eslintConfig": {
     "extends": "./node_modules/ts-standard/eslintrc.json",
