--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.1",
   "description": "A service to shorten your urls.",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "build": "tsc",
-    "start": "tsc & node .",
+    "start": "tsc && node dist/index.js",
     "dev": "nodemon"
   },
   "author": "Chapikas",
@@ -25,7 +28,6 @@
     "ts-dotenv": "^0.8.3",
     "ts-node": "^10.0.0",
     "ts-standard": "^10.0.0",
-    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.3.2"
   },
   "dependencies": {
@@ -34,6 +36,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
     "mongoose": "^5.12.13",
     "randomstring": "^1.2.1",
     "swagger-jsdoc": "^6.1.0",
