--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "tsc && node dist/index.js",
+    "postinstall": "npm run build",
+    "start": "node dist/index.js",
     "dev": "nodemon"
   },
   "author": "Chapikas",
