Added jwt to doc entry

--- a/docs/shortener.yaml
+++ b/docs/shortener.yaml
@@ -42,6 +42,8 @@ paths:
           description: User not found
   /delete:
       delete:
+        security:
+        - bearerAuth: []
         tags:
           - Url
         summary: Delete a short url
